http changed to https

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://M9heb.github.io/7-usePopcorn.git",
+  "homepage": "https://M9heb.github.io/7-usePopcorn",
 
   "name": "usepopcorn",
   "version": "0.1.0",
